<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones_login.Login_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <TextView
            android:text="@string/txt_Login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/login"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <!-- email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/et_Email"
                android:hint="@string/et_Email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>
        <!-- password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_Password"
                android:hint="@string/et_Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>
        <!-- boton ingresar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Ingresar"
            android:text="@string/btn_Ingresar"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_width="180dp"
            android:layout_height="@dimen/m_button_heighet"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_No_Cuenta"
                android:text="@string/txt_No_Cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_Registrar"
                android:text="@string/txt_Registrar"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>